--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section class="section slide-left">
         <div class="card">
             
-            <img src="/images/about.png" class="card-img-top" alt="..." style="width: 300px; margin: auto;">
+            <img src="about.png" class="card-img-top" alt="..." style="width: 300px; margin: auto;">
             <div class="card-body">
               <h5 class="card-title">About Us</h5>
               <p class="card-text">
